[package]
name = "nala-rust"
version = "0.1.0"
authors = ["Nathan Wiles <ntwiles@gmail.com>"]
edition = "2018"

[lib]
name = "library"
path = "src/lib.rs"

[[bin]]
name = "nala_rust"
path = "src/main.rs"

[build-dependencies]
lalrpop = "0.19.6"

[dependencies]
lalrpop-util = "0.19.6"
serde = { version = "1.0.135", features = ["derive"]}
serde_json = "1.0.59"
regex = "1.5.4"