[package]
name = "nala_interpreter"
version = "0.1.0"
edition = "2018"

[build-dependencies]
lalrpop = "0.19.9"

[lib]
name = "nala_interpreter"
path = "src/lib.rs"

[dependencies]
lalrpop-util = "0.19.9"
regex = "1.5.4"
reqwest = { version = "0.11.11", features = ["blocking", "json"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"